# ZejfSeisServer

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
arduino/: ADS1256_Seismo_untested.ino  README.md
arduino/ADS1256_Seismo/: ADS1256_Seismo.ino
src/: arraylist.c  arraylist.h  com_utils.c  com_utils.h  data.c  data.h  main.c  my_string.c  my_string.h  scheduler.c  scheduler.h  serial_reader.c  serial_reader.h  server.c  server.h  time_utils.c  time_utils.h
